size of left and right components are now better

--- a/style.css
+++ b/style.css
@@ -28,18 +28,27 @@ body {
 
 main {
     display: flex;
-    gap: 2rem; 
+    gap: 2rem;
+    align-items: flex-end;
 }
 
-.letf {
-    width: 30rem;
-    height: 20rem;
+.left {
+    width: 20rem;
+    height: 12rem;
     background-color: var(--Dark-Blue);
+    padding: 2.5rem;
+    border-radius: 1rem 7rem 1rem 1rem;
 }
 
 /* ******************left ve right ayrımı********** */
 
-.right {}
+.right {
+    width: 32rem;
+    height: 10rem;
+    background-color: var(--Dark-Blue);
+    padding: 2.5rem;
+    border-radius: 1.2rem;
+}
 
 .attribution {
      font-size: 11px; 
