--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
 
 :root {
 
-    --Gradient: hsl(6, 100%, 80%) to hsl(335, 100%, 65%);
-    --Pale-Blue: hsl(243, 100%, 93%);
+    --Gradient: hsl(6, 100%, 80%),hsl(335, 100%, 65%);
+    --txt-color: hsl(243, 100%, 93%);
     --Grayish-Blue: hsl(229, 7%, 55%);
     --Dark-Blue: hsl(228, 56%, 26%);
     --main-bg: hsl(229, 57%, 11%);
@@ -33,21 +33,88 @@ main {
 }
 
 .left {
-    width: 20rem;
-    height: 12rem;
+    display: flex;
+    flex-direction: column;
+    width: 24rem;
+    height: 13rem;
     background-color: var(--Dark-Blue);
     padding: 2.5rem;
     border-radius: 1rem 7rem 1rem 1rem;
+    gap: 1.6rem;
 }
 
+.secondary-icons {
+    display: flex;
+}
+
+.icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 3rem;
+    height: 3rem;
+    margin: 0.5rem;
+    padding: 0.9rem;
+    border-radius: 0.4rem;
+    background: var(--main-bg);
+    cursor: pointer;
+    transition: transform 0.3s;
+}
+
+.icon img:hover {
+    transform: scale(1.2); 
+}
 /* ******************left ve right ayrımı********** */
 
 .right {
-    width: 32rem;
-    height: 10rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    width: 38rem;
+    height: 11rem;
     background-color: var(--Dark-Blue);
     padding: 2.5rem;
     border-radius: 1.2rem;
+    color: var(--txt-color);
+}
+
+span {
+    font-weight: 700;
+}
+
+.progress-bar {
+    background-color: var(--main-bg);
+    width: 33rem;
+    height: 1.3rem;
+    border-radius: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.progress{
+    width: 25rem;
+    height: 1rem;
+    border-radius: 1rem;
+    margin-left: 1px;
+    background: linear-gradient(90deg, var(--Gradient));
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.dot {
+    background-color: #ffff;
+    width: 0.7rem;
+    height: 0.7rem;
+    border-radius: 50%;
+    margin-right: 1px;
+
+}
+
+.texts {
+    display: flex;
+    justify-content: space-between;
 }
 
 .attribution {
