--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Raleway', sans-serif;
 }
 
 :root {
@@ -116,6 +117,32 @@ span {
     display: flex;
     justify-content: space-between;
 }
+
+/***************** box başlangıç************ */
+
+.box {
+    color: var(--Grayish-Blue);
+    background-color: #ffff;
+    margin-left: 20rem;
+    margin-top: -13rem;
+    font-size: 0.8rem; 
+    padding: 1.5rem;
+    border-radius: 0.7rem;
+    font-weight: 700;
+}
+
+.box p {
+    display: flex;
+    align-items: center;
+    gap: 0.8rem;
+    letter-spacing: 0.1rem;
+}
+
+.box span {
+    font-size: 3rem;
+    color: var(--main-bg);
+}
+
 
 .attribution {
      font-size: 11px; 
