--- a/style.css
+++ b/style.css
@@ -110,7 +110,6 @@ span {
     height: 0.7rem;
     border-radius: 50%;
     margin-right: 1px;
-
 }
 
 .texts {
@@ -124,10 +123,10 @@ span {
     color: var(--Grayish-Blue);
     background-color: #ffff;
     margin-left: 20rem;
-    margin-top: -13rem;
+    margin-top: -14rem;
     font-size: 0.8rem; 
     padding: 1.5rem;
-    border-radius: 0.7rem;
+    border-radius: 0.7rem 0.7rem 0rem 0.7rem;
     font-weight: 700;
 }
 
@@ -142,8 +141,16 @@ span {
     font-size: 3rem;
     color: var(--main-bg);
 }
-
-
+.box::after {
+    content: '';
+    position: absolute;
+    height: 2rem;
+    width: 2rem;
+    background-color: #ffff;
+    clip-path: polygon(0 0, 100% 0, 100% 100%);
+    margin-top: 1.5rem;
+    margin-left: 9.52rem;
+}
 .attribution {
      font-size: 11px; 
      text-align: center;
